--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
-    <script src="./Assets/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
